# schoolkeuze2026

./: .gitignore  00_core.ipynb  README.md  main.py  pyproject.toml  requirements.txt  schoolkeuze_app.ipynb  vwo_scholen.csv
schoolkeuze2026/: _modidx.py  core.py
