[project]
name = "schoolkeuze2026"
version = "0.0.1"
description = "Simulatie van de Amsterdamse VWO loting & matching (DA-STD)"
authors = [{name = "daburer"}]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["education", "simulation", "amsterdam"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "fasthtml",
    "monsterui",
]

[tool.nbdev]
nbs_path = "."
lib_path = "schoolkeuze2026"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
